[FRONT] Fix scrollbars and background

--- a/app/src/app/home/home.component.scss
+++ b/app/src/app/home/home.component.scss
@@ -3,10 +3,6 @@
 	font-family: myfont;
 }
 
-body {
-	background-image: url('../../assets/home.jpg');
-}
-
 h1 {
 	color: black;
 	min-height: 50vh;
