--- a/app/src/app/map/map.component.scss
+++ b/app/src/app/map/map.component.scss
@@ -2,4 +2,5 @@
   overflow: auto;
   width: 100%;
   height: 50vh;
+  background-color: aliceblue;
 }
