--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -9,3 +9,7 @@ html, body {
   height: 100%;
   margin: 0;
 }
+
+body {
+	background-image: url('assets/home.jpg');
+}
